A couple of edits here and there link most of the available pages
Last surpise, check the europe luxury holiday...

--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -15,7 +15,7 @@
 				</div>
 				<nav>
 					<ul class="nav">
-						<li class="sign-up"><a href="registration.html">Sign Up</a></li>
+						<li class="sign-up"><a href="../Sign Up Page/registration.html">Sign Up</a></li>
 						<li class = "login">Login</li>
 					</ul>
 				</nav>
@@ -24,18 +24,18 @@
 		
 		<main class = "main">
 			<div class = "container">
-				<h1>Login</h1>
+				<center><h1 class = "log">Login</h1></center>
 				<form>
 					<p>Username:</p>
 					<input id = "username" type = "text"></input>
 					<p>Password:</p>
 					<input id = "pWord" type = "text"></input> 
 					<div class = "buttons">
-						<a href = "home.html" class = "btn btn-back">Back</a>
-						<a href = "home2.html" class = "btn btn-submit">Submit</a>
+						<a href = "../home.php" class = "btn btn-back" style = "float: left">Back</a>
+						<a href = "home2.html" class = "btn btn-submit" style = "float: left">Submit</a>
+						<a href = "#" class = "pass"><p style = "float: left">Forgot your password</p></a>
 					</div>
 				</form>
-				<p class = "pass">Forgot your password</p>
 			</div>
 		</main>
 		
