--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -16,7 +16,7 @@
 				<nav>
 					<ul class="nav">
 						<li class="sign-up"> Sign Up</li>
-						<li class="login"><a href="login.html">Login</a></li>
+						<li class="login"><a href="../Login Page/login.html">Login</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -24,7 +24,7 @@
 		
 		<main class = "main">
 			<div class = "container">
-				<h1>Sign Up</h1>
+				<center><h1 class = "h1">Sign Up</h1></center>
 				<form>
 					<p>First Name:</p>
 					<input id = "fName" type = "text"></input>
@@ -43,7 +43,7 @@
 					<p>Where do you stay?: </p>
 					<input id = "town" type = "text"></input>
 					<div class = "buttons">
-						<a href = "home.html" class = "btn btn-back">Back</a>
+						<a href = "../home.php" class = "btn btn-back">Back</a>
 						<a href = "home2.html" class = "btn btn-submit">Submit</a>
 					</div>					
 				</form>
