Sign Up Page Update

--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 	<head>
-		<meta charset = "utf-8">
-		<title>Travel App</title>
-		<link href = "css/home_style.css" type = "text/css" rel = "stylesheet">
-		<link href = "css/style_registration.css" type = "text/css" rel = "stylesheet">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Travel Buddy</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,700" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	
 	<body>
-		<header class = "header">
-			<div class = "container">
-				<div class = "logo">
-				<h2>Travel App</h2>
+		<!-- NAVBAR -->
+		<nav class="navbar">
+				<h4 class="navbar-heading">Travel buddy</h4>
+				<div>
+					<a href = "login.html"><button type="button" class="btn btn-outline-secondary btn-sm">Sign In</button></a>
+					<a href = "signup.html"><button type="button" class="btn btn-outline-secondary btn-sm">Sign up</button></a>
 				</div>
-				<nav>
-					<ul class="nav">
-						<li class="sign-up"> Sign Up</li>
-						<li class="login"><a href="../Login Page/login.html">Login</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+		</nav>
+		<!-- END NAVBAR -->
 		
 		<main class = "main">
 			<div class = "container">
@@ -50,18 +48,19 @@
 			</div>
 		</main>
 		
-		<footer class = "footer">
-			<div class = "container">
-				<div class = "logo">
-					<p id = "logo">Travel App</p>
-					<p id = "copyright">Group 15 - Website<br />Copyright 2017</p>
+		<!-- FOOTER -->
+		<nav class="navbar footer">
+				<h4 class="navbar-heading">Travel buddy</h4>
+				<div>
+					<p>Follow us on</p>
+					<button type="button" class="btn btn-outline-secondary btn-sm">Facebook</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm">Twitter</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm">Instagram</button>
 				</div>
-				<nav>
-					<ul class="nav">
-						<p id = "follow-us">Follow us on<br /><a href = "http://www.twitter.com">Twitter</a> / <a href = "http://www.facebook.com">Facebook</a> / <a href = "http://www.instagram.com">Instagram</a></p>
-					</ul>
-				</nav>
-			</div>
-		</footer>
+		</nav>
+		<!-- FOOTER END -->
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</body>
 </html>
