Add login page styling

--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Travel Buddy</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+		<link href="../css/styles.css" rel="stylesheet">
+	</head>
+	<body>
+		<div class="fullscreen-section">
+				<div class="card">
+				<p class="logo logo-small-dark">Travel Buddy</p>
+				<h2>Login</h2>
+				<p>Please enter your username and password.</p>
+				<form>
+					<div class="form-group">
+						<label>Username:</label>
+						<input id = "username" type = "text" class="form-control"></input>
+					</div>
+					<div class="form-group">
+						<label>Password:</label>
+						<input id = "pWord" type = "text" class="form-control"></input>
+					</div>
+					<a href = "home2.html" class = "btn btn-primary btn-submit float-right">Submit</a>
+					<div class = "buttons">
+						<a href = "../home.html">Back</a>&emsp;
+						<a href = "#" class = "pass">
+						<a href = "#">Forgot your password?</a>
+					</div>
+				</form>
+			</div>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	</body>
+</html>
+
+
+<!-- <html>
 	<head>
 		<meta charset = "utf-8">
 		<title>Login Page</title>
 		<link href = "css/home_style.css" type = "text/css" rel = "stylesheet">
 		<link href = "css/login_style.css" type = "text/css" rel = "stylesheet">
 	</head>
-	
+
 	<body>
 		<header class = "header">
 			<div class = "container">
@@ -21,7 +62,7 @@
 				</nav>
 			</div>
 		</header>
-		
+
 		<main class = "main">
 			<div class = "container">
 				<center><h1 class = "log">Login</h1></center>
@@ -29,7 +70,7 @@
 					<p>Username:</p>
 					<input id = "username" type = "text"></input>
 					<p>Password:</p>
-					<input id = "pWord" type = "text"></input> 
+					<input id = "pWord" type = "text"></input>
 					<div class = "buttons">
 						<a href = "../home.php" class = "btn btn-back" style = "float: left">Back</a>
 						<a href = "home2.html" class = "btn btn-submit" style = "float: left">Submit</a>
@@ -38,7 +79,7 @@
 				</form>
 			</div>
 		</main>
-		
+
 		<footer class = "footer">
 			<div class = "container">
 				<div class = "logo">
@@ -53,4 +94,4 @@
 			</div>
 		</footer>
 	</body>
-</html>
+</html> -->
