--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
-				<h4 class="navbar-heading">Travel buddy</h4>
+				<p class="logo logo-small-light">Travel Buddy</p>
 				<div>
 					<a class="btn btn-outline-secondary btn-sm" href="Sign Up Page/registration.html">Sign Up</a>
 					<a class="btn btn-outline-secondary btn-sm" href="Login Page/login.html">Login</a>
@@ -21,9 +21,10 @@
 		<!-- NAVBAR END -->
 		<!-- WELCOME BANNER -->
 		<div class="welcome-banner" style="background-image: url(https://static.pexels.com/photos/417344/pexels-photo-417344.jpeg);">
+				<p class="logo logo-large">Travel Buddy</p>
 				<h2>Let’s go on an adventure!</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet congue velit quis gravida. Vivamus cursus arcu a tempor dictum.Quisque sapien nisl, porttitor ut ligula sed, commodo eleifend purus. Fusce bibendum tristique nulla, eget scelerisque erat condimentum at. Aenean consectetur magna tempus orci ullamcorper, ac faucibus enim iaculis.</p>
-				<button type="button" class="btn btn-primary btn-lg">Let's go!</button>
+				<a class="btn btn-primary btn-lg" href="Login Page/login.html">Let's go!</a>
 		</div>
 		<!-- WELCOME BANNER END -->
 		<!-- HOW DOES IT WORK -->
