Add link to home page from nav logo

--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -10,9 +10,17 @@
 		<link href="../css/styles.css" rel="stylesheet">
 	</head>
 	<body>
+		<!-- NAVBAR -->
+		<nav class="navbar">
+				<a href = "../home.html" class="logo logo-small-light">Travel Buddy</a>
+				<div>
+					<a class="btn btn-outline-secondary btn-sm" href="../Sign Up Page/registration.html">Sign Up</a>
+				</div>
+		</nav>
+		<!-- NAVBAR END -->
 		<div class="fullscreen-section">
 				<div class="card">
-				<p class="logo logo-small-dark">Travel Buddy</p>
+				<a href = "../home.html" class="logo logo-small-dark">Travel Buddy</a>
 				<h2>Login</h2>
 				<p>Please enter your username and password.</p>
 				<form>
