--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -12,6 +12,14 @@
 		<link href="../css/styles.css" rel="stylesheet">
 	</head>
 	<body>
+		<!-- NAVBAR -->
+		<nav class="navbar">
+				<a href = "../home.html" class="logo logo-small-light">Travel Buddy</a>
+				<div>
+					<a class="btn btn-outline-secondary btn-sm" href="../Login Page/login.html">Login</a>
+				</div>
+		</nav>
+		<!-- NAVBAR END -->
 		<div class="fullscreen-section">
 				<div class="card">
 				<p class="logo logo-small-dark">Travel Buddy</p>
