Add footer logo

--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
 		<!-- WHAT PEOPLE SAID ABOUT US END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
-				<h4 class="navbar-heading">Travel buddy</h4>
+				<p class="logo logo-small-light">Travel Buddy</p>
 				<div>
 					<p>Follow us on</p>
 					<a class="btn btn-outline-secondary btn-sm" href="http://www.twitter.com">Twitter</a>
