--- a/Destination Show/destination-show.html
+++ b/Destination Show/destination-show.html
@@ -28,9 +28,9 @@
 		</div>
 		<!-- BANNER END -->
 		<!-- BUTTONS -->
-		<div class="container container-small mt-3">
-				<button type="button" class="btn btn-success ml-1 float-right">New Travelbook</button>
-				<button type="button" class="btn btn-primary ml-1 float-right">Add to my existing travelbook</button>
+		<div class="container container-small mt-3 clearfix">
+				<button class="btn btn-success ml-1 float-right js-new-travelbook">New Travelbook</button>
+				<button class="btn btn-primary ml-1 float-right js-existing-travelbook">Add to my existing travelbook</button>
 		</div>
 		<!-- BUTTONS END-->
 		<!-- LOCAL ATTRACTIONS -->
@@ -256,6 +256,62 @@
 			</div>
 		</div>
 		<!-- PREVIOUS SEARCH END -->
+		<!-- NEW TRAVELBOOK -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		        ...
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		        <button type="button" class="btn btn-primary">Save changes</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+		<div class="popover-modal js-new-travelbook-modal">
+				<div class="popover-modal-container">
+						<h4>Name your new travelbook</h4>
+						<form>
+							<div class="form-group">
+								<input type = "text" class="form-control"></input>
+							</div>
+							<button type="button" class="btn btn-primary">Okay</button>
+							<button type="button" class="btn btn-secondary js-new-travelbook">Cancel</button>
+						</form>
+				</div>
+		</div>
+		<div class="popover-modal js-new-existing-modal">
+			<div class="popover-modal-container">
+					<h4>Select travelbook</h4>
+					<form>
+						<div class="form-group">
+						<label class="custom-control custom-radio">
+						  <input id="radio1" name="radio" type="radio" class="custom-control-input">
+						  <span class="custom-control-indicator"></span>
+						  <span class="custom-control-description">Travelbook 1</span>
+						</label>
+						</div>
+						<div>
+						<label class="custom-control custom-radio">
+						  <input id="radio2" name="radio" type="radio" class="custom-control-input">
+						  <span class="custom-control-indicator"></span>
+						  <span class="custom-control-description">Travelbook 2</span>
+						</label>
+						</div>
+						<button type="button" class="btn btn-primary">Okay</button>
+						<button type="button" class="btn btn-secondary js-existing-travelbook">Cancel</button>
+					</form>
+			</div>
+		</div>
+		<!-- NEW TRAVELBOOK END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
 				<p class="logo logo-small-light">Travel Buddy</p>
@@ -270,5 +326,14 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script>
+			$(".js-new-travelbook").click( function() {
+			   $(".js-new-travelbook-modal").toggle();
+			});
+
+			$(".js-existing-travelbook").click( function() {
+			   $(".js-new-existing-modal").toggle();
+			});
+		</script>
 	</body>
 </html>
