fix destination index

--- a/DestinationIndex/destination-index.html
+++ b/DestinationIndex/destination-index.html
@@ -18,10 +18,10 @@
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
 				</div>
 		</nav>
-		<h1 class="heading-destination">Top Destinations</h1>
-		<h5 class="heading-destination">Add one of the following destinations to your travelbook</h5>
-		<h4 class="heading-destination">Top Destinations</h4>
-
+		<div class="gradient-banner">
+			<h1 class="heading-destination">Top Destinations</h1>
+			<h5 class="heading-destination">Add one of the following destinations to your travelbook</h5>
+		</div>
 		<!-- TOP DESTINATION-->
 		<div class="container">
 			<div class="row">
@@ -53,8 +53,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card">
@@ -84,8 +82,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card">
@@ -115,8 +111,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<div class="card">
@@ -148,6 +142,16 @@
 			</div>
 		</div>
 		<!-- TOP DESTINATION-->
+		<!-- FOOTER -->
+		<nav class="navbar footer">
+				<p class="logo logo-small-light">Travel Buddy</p>
+				<div>
+					<p>Follow us on</p>
+					<a class="btn btn-outline-secondary btn-sm" href="http://www.twitter.com">Twitter</a>
+					<a class="btn btn-outline-secondary btn-sm" href="http://www.facebook.com">Facebook</a>
+					<a class="btn btn-outline-secondary btn-sm" href="http://www.instagram.com">Instagram</a>
+				</div>
+		</nav>
 		<!-- FOOTER END -->
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
