--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -14,7 +14,7 @@
 		<nav class="navbar">
 				<p class="logo logo-small-light">Travel Buddy</p>
 				<div>
-					<a class="btn btn-success btn" href="../home.html">My Travelbook</a>
+					<button class="btn btn-success btn toggle-travelbook">My Travelbook</button>
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
 				</div>
 		</nav>
@@ -142,6 +142,54 @@
 			</div>
 		</div>
 		<!-- TOP DESTINATION END -->
+		<!-- SIDEBAR -->
+		<div class="sidebar">
+			<a class="logo logo-small-dark">Travel Buddy</a>
+			<button type="button" class="close toggle-travelbook" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+			<h3>My Travelbook</h3>
+			<div class="card">
+				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<div class="list-group">
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						London
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Paris
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Rome
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+				</div>
+			</div>
+		</div>
+		<!-- SIDEBAR END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
 				<p class="logo logo-small-light">Travel Buddy</p>
@@ -156,5 +204,6 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script src="../js/close_menu.js"></script>
 	</body>
 </html>
