Add links, sidebars and tweak styling

--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -12,7 +12,7 @@
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
-				<p class="logo logo-small-light">Travel Buddy</p>
+				<a class="logo logo-small-light" href="../home.html">Travel Buddy</a>
 				<div>
 					<button class="btn btn-success btn toggle-travelbook">My Travelbook</button>
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
@@ -26,7 +26,7 @@
 				<div class="form-group row">
 		    <input type="email" class="form-control form-control-lg" id="lgFormGroupInput" placeholder="I want to visit...">
 		    </div>
-				<a class="btn btn-primary btn-lg" href="Login Page/login.html">Let's go!</a>
+				<a class="btn btn-primary btn-lg" href="../Search Results/search-results.html">Let's go!</a>
 		</div>
 		<!-- WELCOME BANNER END -->
 		<!-- PREVIOUS SEARCH -->
@@ -34,42 +34,43 @@
 		  <h3 class="container-heading">You previously looked at</h3>
 		  <div class="row">
 		    <div class="col-12 col-md-6 col-lg-3">
-		      <div class="card card-inverse">
-		      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-		      <div class="card-img-overlay">
-		        <h4 class="card-title">Card title</h4>
-		        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-		      </div>
-		    </div>
-		    </div>
+		      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <div class="card-img-overlay">
+				        <h4 class="card-title">Card title</h4>
+				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				      </div>
+				    </a>
+					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
-		      <div class="card card-inverse">
-		      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-		      <div class="card-img-overlay">
-		        <h4 class="card-title">Card title</h4>
-		        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-		      </div>
-		    </div>
-		    </div>
+					<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <div class="card-img-overlay">
+				        <h4 class="card-title">Card title</h4>
+				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				      </div>
+				    </a>
+					</div>
+
 		    <div class="col-12 col-md-6 col-lg-3">
-		      <div class="card card-inverse">
-		      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-		      <div class="card-img-overlay">
-		        <h4 class="card-title">Card title</h4>
-		        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-		      </div>
-		    </div>
-		    </div>
+					<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <div class="card-img-overlay">
+				        <h4 class="card-title">Card title</h4>
+				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				      </div>
+				    </a>
+					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
-		      <div class="card card-inverse">
-		      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-		      <div class="card-img-overlay">
-		        <h4 class="card-title">Card title</h4>
-		        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-		      </div>
+						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <div class="card-img-overlay">
+				        <h4 class="card-title">Card title</h4>
+				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				      </div>
+						</a>
 		    </div>
-		    </div>
-		  </div>
+				</div>
 		</div>
 		<!-- PREVIOUS SEARCH END -->
 		<!-- PREPLANNED -->
@@ -78,31 +79,31 @@
 				<h3 class="container-heading">View and use preplanned tours</h3>
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
-						<div class="card">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						</div>
+						<a class="card card-link" href="../Tour Show/tour-show.html">
+							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<div class="card-block">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</a>
 					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						</div>
+					<div class="col-12 col-md-12 col-lg-4">
+						<a class="card card-link" href="../Tour Show/tour-show.html">
+							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<div class="card-block">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</a>
 					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						</div>
+					<div class="col-12 col-md-12 col-lg-4">
+						<a class="card card-link" href="../Tour Show/tour-show.html">
+							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<div class="card-block">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -113,31 +114,31 @@
 			<h3 class="container-heading">Top Destinations</h3>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-					</div>
+					<a class="card card-link" href="../Destination Show/destination-show.html">
+						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+						<div class="card-block">
+							<h4 class="card-title">Card title</h4>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</a>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-					</div>
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
+						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+						<div class="card-block">
+							<h4 class="card-title">Card title</h4>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</a>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-					</div>
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
+						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+						<div class="card-block">
+							<h4 class="card-title">Card title</h4>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
