--- a/home.html
+++ b/home.html
@@ -64,31 +64,31 @@
 				<h3 class="container-heading">View and use preplanned tours</h3>
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
-						<div class="card">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						</div>
+						<a href="Tour Show/tour-show.html" class="card card-link">
+							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<div class="card-block">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</a>
 					</div>
-	  			<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-						</div>
+					<div class="col-12 col-md-12 col-lg-4">
+						<a href="Tour Show/tour-show.html" class="card card-link">
+							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<div class="card-block">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
+						<a href="Tour Show/tour-show.html" class="card card-link">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 				</div>
 			</div>
@@ -99,31 +99,31 @@
 			<h3 class="container-heading">Top Destinations</h3>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 			</div>
 		</div>
