--- a/Destination Show/destination-show.html
+++ b/Destination Show/destination-show.html
@@ -12,9 +12,9 @@
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
-				<p class="logo logo-small-light">Travel Buddy</p>
+				<a class="logo logo-small-light" href="../Landing Page/landing-page.html">Travel Buddy</a>
 				<div>
-					<a class="btn btn-success btn" href="../home.html">My Travelbook</a>
+					<button class="btn btn-success btn toggle-travelbook">My Travelbook</button>
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
 				</div>
 		</nav>
@@ -38,31 +38,31 @@
 			<h3 class="container-heading">Local Attractions</h3>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 			</div>
 		</div>
@@ -73,31 +73,31 @@
 				<h3 class="container-heading">Tourist Attractions</h3>
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 	  			<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.tripadvisor.co.za/Attractions">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 				</div>
 			</div>
@@ -108,31 +108,31 @@
 			<h3 class="container-heading">Accomodation</h3>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.airbnb.com/">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.airbnb.com/">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="https://www.airbnb.com/">
 					<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 			</div>
 		</div>
@@ -143,31 +143,31 @@
 				<h3 class="container-heading">Restaurants</h3>
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.zomato.com/">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.zomato.com/">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
-						<div class="card">
+						<a class="card card-link" href="https://www.zomato.com/">
 						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 						<div class="card-block">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						</div>
+					</a>
 					</div>
 				</div>
 			</div>
@@ -217,40 +217,40 @@
 			  <h3 class="container-heading">People also searched for</h3>
 			  <div class="row">
 			    <div class="col-12 col-md-6 col-lg-3">
-			      <div class="card card-inverse">
+			      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 			      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 			      <div class="card-img-overlay">
 			        <h4 class="card-title">Card title</h4>
 			        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 			      </div>
-			    </div>
+			    </a>
 			    </div>
 			    <div class="col-12 col-md-6 col-lg-3">
-			      <div class="card card-inverse">
+			      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 			      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 			      <div class="card-img-overlay">
 			        <h4 class="card-title">Card title</h4>
 			        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 			      </div>
-			    </div>
+			    </a>
 			    </div>
 			    <div class="col-12 col-md-6 col-lg-3">
-			      <div class="card card-inverse">
+			      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 			      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 			      <div class="card-img-overlay">
 			        <h4 class="card-title">Card title</h4>
 			        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 			      </div>
-			    </div>
+			    </a>
 			    </div>
 			    <div class="col-12 col-md-6 col-lg-3">
-			      <div class="card card-inverse">
+			      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 			      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 			      <div class="card-img-overlay">
 			        <h4 class="card-title">Card title</h4>
 			        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 			      </div>
-			    </div>
+			    </a>
 			    </div>
 			  </div>
 			</div>
@@ -283,7 +283,7 @@
 							<div class="form-group">
 								<input type = "text" class="form-control"></input>
 							</div>
-							<button type="button" class="btn btn-primary">Okay</button>
+							<a class="btn btn-primary" href="../Tour Show/tour-show.html">Okay</a>
 							<button type="button" class="btn btn-secondary js-new-travelbook">Cancel</button>
 						</form>
 				</div>
@@ -306,12 +306,60 @@
 						  <span class="custom-control-description">Travelbook 2</span>
 						</label>
 						</div>
-						<button type="button" class="btn btn-primary">Okay</button>
+						<a class="btn btn-primary" href="../Tour Show/tour-show.html">Okay</a>
 						<button type="button" class="btn btn-secondary js-existing-travelbook">Cancel</button>
 					</form>
 			</div>
 		</div>
 		<!-- NEW TRAVELBOOK END -->
+		<!-- SIDEBAR -->
+		<div class="sidebar">
+			<a class="logo logo-small-dark">Travel Buddy</a>
+			<button type="button" class="close toggle-travelbook" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<h3>My Travelbook</h3>
+			<div class="card">
+				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<div class="list-group">
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						London
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Paris
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Rome
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+				</div>
+			</div>
+		</div>
+		<!-- SIDEBAR END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
 				<p class="logo logo-small-light">Travel Buddy</p>
@@ -335,5 +383,6 @@
 			   $(".js-new-existing-modal").toggle();
 			});
 		</script>
+		<script src="../js/close_menu.js"></script>
 	</body>
 </html>
