--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -32,7 +32,7 @@
 						<label>Password:</label>
 						<input id = "pWord" type = "text" class="form-control"></input>
 					</div>
-					<a href = "home2.html" class = "btn btn-primary btn-submit float-right">Submit</a>
+					<a href = "../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a>
 					<div class = "buttons">
 						<a href = "../home.html">Back</a>&emsp;
 						<a href = "#" class = "pass">
