--- a/Search Results/search-results.html
+++ b/Search Results/search-results.html
@@ -12,9 +12,9 @@
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
-				<p class="logo logo-small-light">Travel Buddy</p>
+				<a class="logo logo-small-light" href="../Landing Page/landing-page.html">Travel Buddy</a>
 				<div>
-					<a class="btn btn-success btn" href="../home.html">My Travelbook</a>
+					<button class="btn btn-success btn toggle-travelbook">My Travelbook</button>
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
 				</div>
 		</nav>
@@ -29,51 +29,51 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
-  			<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<div class="card">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
-  			<div class="col-12 col-md-6 col-lg-4">
-					<div class="card">
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Destination Show/destination-show.html">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Card title</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
-					</div>
+				</a>
 				</div>
 			</div>
 		</div>
@@ -84,45 +84,93 @@
 				<h3 class="container-heading">People also searched for</h3>
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card card-inverse">
+						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 						<div class="card-img-overlay">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 						</div>
-					</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card card-inverse">
+						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 						<div class="card-img-overlay">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 						</div>
-					</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card card-inverse">
+						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 						<div class="card-img-overlay">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 						</div>
-					</div>
+					</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3">
-						<div class="card card-inverse">
+						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
 						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 						<div class="card-img-overlay">
 							<h4 class="card-title">Card title</h4>
 							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 						</div>
-					</div>
+					</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- PREVIOUS SEARCH END -->
+		<!-- SIDEBAR -->
+		<div class="sidebar">
+			<a class="logo logo-small-dark">Travel Buddy</a>
+			<button type="button" class="close toggle-travelbook" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<h3>My Travelbook</h3>
+			<div class="card">
+				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<div class="list-group">
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						London
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Paris
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Rome
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+				</div>
+			</div>
+		</div>
+		<!-- SIDEBAR END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
 				<p class="logo logo-small-light">Travel Buddy</p>
@@ -137,5 +185,6 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script src="../js/close_menu.js"></script>
 	</body>
 </html>
