--- a/Sign Up Page/registration.html
+++ b/Sign Up Page/registration.html
@@ -58,7 +58,7 @@
 						<p>Where do you stay? </p>
 						<input id = "town" type = "text" class="form-control"></input>
 					</div>
-					<a href = "home2.html" class = "btn btn-primary btn-submit float-right">Submit</a>
+					<a href="../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a>
 					<div class = "buttons">
 						<a href = "../home.html">Back</a>&emsp;
 					</div>
