--- a/Tour Show/tour-show.html
+++ b/Tour Show/tour-show.html
@@ -12,9 +12,9 @@
 	<body>
 		<!-- NAVBAR -->
 		<nav class="navbar">
-				<p class="logo logo-small-light">Travel Buddy</p>
+				<a class="logo logo-small-light" href="../Landing Page/landing-page.html">Travel Buddy</a>
 				<div>
-					<a class="btn btn-success btn" href="../home.html">My Travelbook</a>
+					<button class="btn btn-success btn toggle-travelbook">My Travelbook</button>
 					<a class="btn btn-outline-secondary btn-sm" href="../home.html">Logout</a>
 				</div>
 		</nav>
@@ -37,7 +37,7 @@
 					<p><b>Distance:</b> 1021k</p>
 					<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
 				</div>
-				<a href="#" class="list-group-item active">
+				<a href="../Destination Show/destination-show.html" class="list-group-item active">
 			    London
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
@@ -45,7 +45,7 @@
 					<p><b>Distance:</b> 1021k</p>
 					<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
 				</div>
-				<a href="#" class="list-group-item active">
+				<a href="../Destination Show/destination-show.html" class="list-group-item active">
 			    Paris
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
@@ -53,7 +53,7 @@
 					<p><b>Distance:</b> 1021k</p>
 					<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
 				</div>
-				<a href="#" class="list-group-item active">
+				<a href="../Destination Show/destination-show.html" class="list-group-item active">
 			    Rome
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
@@ -69,10 +69,58 @@
 				<h6>Luxury Europe Tour Summary</h6>
 				<p><b>Total Distance:</b> 1021k</p>
 				<p><b>Total Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-				<a class="btn btn-primary btn mt-1" href="../home.html">Add more destinations</a>
+				<a class="btn btn-primary btn mt-1" href="../Landing Page/landing-page.html">Add more destinations</a>
 			</div>
 		</div>
 		<!-- TOUR LIST END -->
+		<!-- SIDEBAR -->
+		<div class="sidebar">
+			<a class="logo logo-small-dark">Travel Buddy</a>
+			<button type="button" class="close toggle-travelbook" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+			<h3>My Travelbook</h3>
+			<div class="card">
+				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
+				<div class="list-group">
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						London
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Paris
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item active">
+						Rome
+						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+					</a>
+					<div href="#" class="list-group-item list-group-item-action">
+						<p><b>Distance:</b> 1021k</p>
+						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+					</div>
+					<a href="#" class="list-group-item home">
+						HOME
+					</a>
+				</div>
+			</div>
+		</div>
+		<!-- SIDEBAR END -->
 		<!-- FOOTER -->
 		<nav class="navbar footer">
 				<p class="logo logo-small-light">Travel Buddy</p>
@@ -87,5 +135,6 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script src="../js/close_menu.js"></script>
 	</body>
 </html>
