--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -21,12 +21,10 @@
 		<!-- NAVBAR END -->
 		<!-- WELCOME BANNER -->
 		<div class="welcome-banner" style="background-image: url(https://static.pexels.com/photos/41949/earth-earth-at-night-night-lights-41949.jpeg);">
-				<h2>Welcome to </br><span class="logo">Travel Buddy!</span></h2>
-				<h4>Enter your dream destination</h4>
-				<div class="form-group row">
-		    <input type="email" class="form-control form-control-lg" id="lgFormGroupInput" placeholder="I want to visit...">
-		    </div>
-				<a class="btn btn-primary btn-lg" href="../Search Results/search-results.html">Let's go!</a>
+				<h2><span class="logo">Travel Buddy!</span></h2>
+				<h4>What do you want to do?</h4>
+				<button class="btn btn-success btn toggle-travelbook btn-lg">View my tavelbook</button>
+				<a class="btn btn-primary btn-lg" href="../Search Results/search-results.html">Search new destinations</a>
 		</div>
 		<!-- WELCOME BANNER END -->
 		<!-- PREVIOUS SEARCH -->
