--- a/Search Results/search-results.html
+++ b/Search Results/search-results.html
@@ -19,110 +19,25 @@
 				</div>
 		</nav>
 		<!-- NAVBAR END -->
-		<!-- BANNER -->
-		<div class="gradient-banner">
-		    <h1>Destinations</h1>
-		    <h5>The following destinations matched your search criteria</h5>
+
+
+		<!-- WELCOME BANNER -->
+		<div class="welcome-banner" style="background-image: url(https://static.pexels.com/photos/41949/earth-earth-at-night-night-lights-41949.jpeg)">
+				<h6><span class="logo">Travel Buddy!</span></h6>
+				<h4 class="destination-name">Enter your dream destination</h4>
+				<p class="hint"></p>
 		</div>
-		<!-- BANNER END -->
-		<!-- RESULTS -->
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-			</div>
+		<!-- WELCOME BANNER END -->
+
+		<!-- GOOGLE SEARCH -->
+		<!-- <div class="map-info"></div> -->
+		<input id="pac-input" type="email" class="form-control form-control-lg " id="lgFormGroupInput" placeholder="I want to visit...">
+		<div class="map-container">
+			<div id="map"></div>
+
 		</div>
-		<!-- RESULTS END -->
-		<!-- PREVIOUS SEARCH -->
-		<div class="background-grey">
-			<div class="container">
-				<h3 class="container-heading">People also searched for</h3>
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-3">
-						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-						<div class="card-img-overlay">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-						</div>
-					</a>
-					</div>
-					<div class="col-12 col-md-6 col-lg-3">
-						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-						<div class="card-img-overlay">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-						</div>
-					</a>
-					</div>
-					<div class="col-12 col-md-6 col-lg-3">
-						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-						<div class="card-img-overlay">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-						</div>
-					</a>
-					</div>
-					<div class="col-12 col-md-6 col-lg-3">
-						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
-						<div class="card-img-overlay">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-						</div>
-					</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- PREVIOUS SEARCH END -->
+
+		<!-- GOOGLE SEARCH END -->
 		<!-- SIDEBAR -->
 		<div class="sidebar">
 			<a class="logo logo-small-dark">Travel Buddy</a>
@@ -185,6 +100,10 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<script src="https://msurguy.github.io/ladda-bootstrap/dist/ladda.min.js"></script>
 		<script src="../js/close_menu.js"></script>
+		<script src="../js/search.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUBHxdSTihUNqqFxLVHAc0cYFKYIoR6FQ&libraries=places&callback=initAutocomplete"
+         async defer></script>
 	</body>
 </html>
