Show image gallery of google search

--- a/Search Results/search-results.html
+++ b/Search Results/search-results.html
@@ -38,6 +38,19 @@
 		</div>
 
 		<!-- GOOGLE SEARCH END -->
+
+		<!-- MORE INFORMATION -->
+
+		<div class="destination-info">
+			<div class="container">
+				<h3 class="container-heading">Gallery</h3>
+				<div class="row photos-row"></div>
+			</div>
+		</div>
+
+		<!-- MORE INFORMATION END -->
+
+
 		<!-- SIDEBAR -->
 		<div class="sidebar">
 			<a class="logo logo-small-dark">Travel Buddy</a>
